--- a/mec-5.4.4-json-data-wrangling-mini-project/Mini_Project_Wrangling_Json_Exercise.ipynb
+++ b/mec-5.4.4-json-data-wrangling-mini-project/Mini_Project_Wrangling_Json_Exercise.ipynb
@@ -80,9 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -148,9 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -246,9 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -433,9 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -588,33 +580,219 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mjtheme_namecode</th>\n",
+       "      <th>Frequency</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Environment and natural resources management</td>\n",
+       "      <td>157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Rural development</td>\n",
+       "      <td>148</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Public sector governance</td>\n",
+       "      <td>140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Human development</td>\n",
+       "      <td>128</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Financial and private sector development</td>\n",
+       "      <td>119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Social protection and risk management</td>\n",
+       "      <td>116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Social dev/gender/inclusion</td>\n",
+       "      <td>114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Trade and integration</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Urban development</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Economic management</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                mjtheme_namecode  Frequency\n",
+       "10  Environment and natural resources management        157\n",
+       "9                              Rural development        148\n",
+       "1                       Public sector governance        140\n",
+       "7                              Human development        128\n",
+       "3       Financial and private sector development        119\n",
+       "5          Social protection and risk management        116\n",
+       "6                    Social dev/gender/inclusion        114\n",
+       "4                          Trade and integration         61\n",
+       "8                              Urban development         40\n",
+       "0                            Economic management         33"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "# Imports\n",
+    "import pandas as pd\n",
+    "import json\n",
+    "from pandas.io.json import json_normalize\n",
+    "from collections import Counter\n",
+    "\n",
+    "\n",
+    "# load data (Pandas)\n",
+    "WorldBankProjects = pd.read_json('data/world_bank_projects.json')\n",
+    "\n",
+    "# (1) Countries with most projects\n",
+    "WorldBankProjects.countryname.value_counts()[:10]\n",
+    "\n",
+    "########## Fix up data before working on Q2 and Q3 #########\n",
+    "\n",
+    "# Project Themes Dictionary\n",
+    "D = {}\n",
+    "for P in WorldBankProjects.mjtheme_namecode:\n",
+    "    for p in P:\n",
+    "        c = p['code']\n",
+    "        n = p['name']\n",
+    "        if (c not in D) and (n): D[c] = n\n",
+    "\n",
+    "# function to remove duplicates\n",
+    "def remove_duplicates(i):\n",
+    "    return set(i.split(','))\n",
+    "\n",
+    "# function to remove duplicates\n",
+    "def custom_dictionary(S):\n",
+    "    L = []\n",
+    "    for i in S:\n",
+    "        E = {}\n",
+    "        E['code'] = i\n",
+    "        E['name'] = D[i]\n",
+    "        L += [E]\n",
+    "    return L\n",
+    "\n",
+    "### Fix dataframe\n",
+    "WorldBankProjects['mjthemecode'] = WorldBankProjects.mjthemecode.apply(remove_duplicates) # Fix mjthemecode\n",
+    "WorldBankProjects['mjtheme_namecode'] = WorldBankProjects.mjthemecode.apply(custom_dictionary) # Fix mjtheme_namecode\n",
+    "\n",
+    "\n",
+    "# (2) Project themes\n",
+    "T = []\n",
+    "for i in WorldBankProjects.mjthemecode: T += list(i)\n",
+    "PThemes = Counter(T)\n",
+    "X = { 'mjtheme_namecode' : [D[str(i)] for i in range(1,12)], 'Frequency' : [ PThemes[str(i)] for i in range(1,12)]}\n",
+    "A = pd.DataFrame(data=X)\n",
+    "A.sort_values(by=['Frequency'], ascending = False).iloc[:10]\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
